# fullpcr

./: .gitignore  DEPLOYMENT.md  README.md  pyproject.toml
deploy/systemd/: fullpcr.env.example  fullpcr.service
docs/superpowers/plans/: 2026-07-15-mist-blue-navigation-design.md  2026-07-15-optional-analysis-parameters.md  2026-07-15-streamlit-shell-cleanup.md  2026-07-16-analysis-parameter-simplification.md  2026-07-16-analysis-parameters-always-visible.md  2026-07-16-auto-cpu-and-error-dialog.md  2026-07-16-pipeline-job-state.md  2026-07-16-pipeline-unlimited-runtime-monitoring.md  2026-07-16-workbench-compact-spacing.md  2026-07-16-workbench-toggle-spacing.md  2026-07-17-versioned-deployment-docs.md
example_data/: mock_mito.fasta  mock_obipcr_amplicons.fasta  positive_control_mito.fasta  primers.tsv  real_mito_small.fasta  real_mito_small_taxonomy.tsv  taxonomy.tsv
fullpcr/: __init__.py  __main__.py  cli.py  degen.py  fasta_parser.py  final_report.py  gui_app.py  gui_helpers.py  mfeprimer_runner.py  obipcr_runner.py  pipeline_jobs.py  primer_export.py  primers.py  qc.py  qc_spec.py  report.py  resolution.py  summarize.py  taxonomy.py  web_workspace.py
fullpcr/assets/: README.md
tests/: test_cli.py  test_degen.py  test_deployment_assets.py  test_fasta_parser.py  test_final_report.py  test_gui_helpers.py  test_mfeprimer_runner.py  test_obipcr_runner.py  test_pipeline_jobs.py  test_primer_export.py  test_primers.py  test_qc.py  test_qc_spec.py  test_report.py  test_resolution.py  test_summarize.py  test_taxonomy.py  test_web_workspace.py
(+10 files in other folders)
