[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fullpcr"
version = "0.1.0"
description = "Batch in silico PCR analysis tool using OBITools4 obipcr"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["fullpcr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
